toc: migrate to Waterfall

--- a/Shard/Shard.csproj
+++ b/Shard/Shard.csproj
@@ -10,11 +10,11 @@
 	<ItemGroup>
 		<ProjectReference Include="..\DragonLib\DragonLib\DragonLib.csproj"/>
 		<ProjectReference Include="..\Shard.SDK\Shard.SDK.csproj"/>
+		<ProjectReference Include="..\Waterfall\Waterfall\Waterfall.csproj"/>
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="IronCompress" Version="1.4.0"/>
-		<PackageReference Include="Semver" Version="3.0.0-beta.0"/>
+		<PackageReference Include="Semver" Version="3.0.0"/>
 	</ItemGroup>
 
 
