--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "DragonLib"]
 	path = DragonLib
 	url = git@github.com:yretenai/DragonLib.git
+[submodule "Waterfall"]
+	path = Waterfall
+	url = https://github.com/yretenai/Waterfall.git
