--- a/Sharder/Sharder.csproj
+++ b/Sharder/Sharder.csproj
@@ -20,7 +20,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Serilog.Sinks.Console" Version="4.1.1-dev-00910"/>
+		<PackageReference Include="Serilog.Sinks.Console" Version="6.0.0"/>
 	</ItemGroup>
 
 </Project>
